feat: add the external plugin SDK
